# ca4rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/: permutations.rs  random_input.rs  rule30.rs
src/: ca.rs  io.rs  lib.rs  rule.rs  vis.rs
tests/: ca.rs
