[package]
name = "ca4rs"
version = "0.1.0"
edition = "2021"
description = "Cellular Automata for Rust"
repository = "https://github.com/andreiamatuni/ca4rs"
homepage = "https://github.com/andreiamatuni/ca4rs"
license = "MIT"
keywords = ["cellular automata", "simulation"]
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
rand = "0.8.5"
plotters = "0.3.6"
ndarray = "0.16.0"
ndarray-npy = "0.8.1"
itertools = "0.13.0"
